fix distorted cloud app icons on mobile

--- a/src/stylesheets/app.scss
+++ b/src/stylesheets/app.scss
@@ -524,6 +524,7 @@ script.podlove-subscribe-button {
       height: 30px !important;
       left: 20px;
       position: absolute;
+      width: 30px !important;
     }
 
     li a {
